--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 sensitive.txt
 
+
 # General template from dotfiles
 # Always ignore official files #
 ################################
@@ -38,3 +39,5 @@ sensitive.txt
 
 *.[sS][aA][sS]7[bB][dD][aA][tT]
 
+# don't ignore this
+!register.csv
