--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,10 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Matthew", "Gregory", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.4.1)
-License: What license is it under?
+Depends: R (>= 3.4.1), dplyr
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat (>= 1.0.2)
+Imports: futile.logger (>= 1.4.3), ggplot2 (>= 2.2.1), lubridate (>= 1.7.0), tibble, zoo (>= 1.8.0)
